--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
 <div class="example-wrapper">
     <h1>MATCH ({{ match.status }})</h1>
     <h2>Players :</h2>
-    <b>{{ match.player1 }}</b><br/>
-    <b>{{ match.player2 }}</b>
+    <b>{{ match.playerA.username }}</b><br/>
+    <b>{{ match.playerB.username }}</b>
 </div>
 {% endblock %}
