--- a/templates/match_maker/edit.html.twig
+++ b/templates/match_maker/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit MatchMaker{% endblock %}
+{% block title %}Edit Match{% endblock %}
 
 {% block body %}
     <h1>Edit MatchMaker</h1>
