--- a/templates/match_maker/index.html.twig
+++ b/templates/match_maker/index.html.twig
@@ -3,87 +3,168 @@
 {% block title %}Match{% endblock %}
 
 {% block body %}
-    <h1>Mes Matchs</h1>
-    <h2>Joueurs en attente ({{ queue }})</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Player A</th>
-                <th>Player B</th>
-                <th>Gagnant</th>
-                <th>Status</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for match_pending in matches_pending %}
-            <tr style="background-color: #43A8FF;color:white;font-weight: bold;">
-                <td>{{ match_pending.id }}</td>
-                <td>{{ match_pending.playerA.username }}</td>
-                <td>{{ match_pending.playerB.username }}</td>
-                <td>{{ match_pending.winner ? match_pending.winner.username : 'N/A' }}</td>
-                <td>{{ match_pending.status }}</td>
-                <td>
-                    {% if is_granted('ROLE_ADMIN') %}
-                    <a href="{{ path('match_maker_show', {'id': match_pending.id}) }}">show</a>
-                    <a href="{{ path('match_maker_edit', {'id': match_pending.id}) }}">edit</a>
-                    {% endif %}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">Aucun match en attente...</td>
-            </tr>
-        {% endfor %}
-        {% for match_playing in matches_playing %}
-            <tr style="background-color: #1C92A9;color:white;font-weight: bold;">
-                <td>{{ match_playing.id }}</td>
-                <td>{{ match_playing.playerA.username }}</td>
-                <td>{{ match_playing.playerB.username }}</td>
-                <td>{{ match_playing.winner ? match_playing.winner.username : 'N/A' }}</td>
-                <td>{{ match_playing.status }}</td>
-                <td>
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <a href="{{ path('match_maker_show', {'id': match_playing.id}) }}">show</a>
-                        <a href="{{ path('match_maker_edit', {'id': match_playing.id}) }}">edit</a>
-                    {% endif %}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">Aucun match en cours...</td>
-            </tr>
-        {% endfor %}
-        {% for match_over in matches_over %}
-            <tr style="color:grey;font-weight: bold;">
-                <td>{{ match_over.id }}</td>
-                <td>{{ match_over.playerA.username }}</td>
-                <td>{{ match_over.playerB.username }}</td>
-                <td>{{ match_over.winner ? match_over.winner.username : 'N/A' }}</td>
-                <td>{{ match_over.status }}</td>
-                <td>
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <a href="{{ path('match_maker_show', {'id': match_over.id}) }}">show</a>
-                        <a href="{{ path('match_maker_edit', {'id': match_over.id}) }}">edit</a>
-                    {% endif %}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">Aucun match terminé...</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<main class="mt-5 mx-auto max-w-7xl px-4 sm:mt-6 sm:px-6 md:mt-8 lg:mt-10 lg:px-8 xl:mt-14 z-50">
+    <div class="flex flex-col">
+        <h1 class="text-2xl font-large text-gray-900">Mes Matchs</h1>
+        <h2 class="text-lg font-medium text-gray-500">Joueurs en attente ({{ queue }})</h2>
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('lobby') }}">Rejoindre le lobby</a>
-        <a href="{{ path('lobbyPending') }}">Visualiser le lobby</a>
-    {% else %}
-        <a href="{{ path('lobby') }}">Rejoindre le lobby</a>
-    {% endif %}
+        <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 mt-5">
+            <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                <h2 id="slide-over-heading" class="text-lg font-medium text-gray-900">
+                    Matchs en attente
+                </h2>
+                <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Player A
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Player B
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Gagnant
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Status
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Action
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="bg-white divide-y divide-gray-200">
+                        {% for match_pending in matches_pending %}
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_pending.id }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_pending.playerA.username }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_pending.playerB.username }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_pending.winner ? match_pending.winner.username : 'N/A' }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_pending.status }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                        <a href="{{ path('match_maker_show', {'id': match_pending.id}) }}">show</a>
+                                        <a href="{{ path('match_maker_edit', {'id': match_pending.id}) }}">edit</a>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="6">Aucun match en attente...</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
+        <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 mt-5">
+            <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                <h2 id="slide-over-heading" class="text-lg font-medium text-gray-900">
+                    Matchs en cours
+                </h2>
+                <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Player A
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Player B
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Gagnant
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Status
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Action
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="bg-white divide-y divide-gray-200">
+                        {% for match_playing in matches_playing %}
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_playing.id }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_playing.playerA.username }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_playing.playerB.username }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_playing.winner ? match_playing.winner.username : 'N/A' }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_playing.status }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                        <a href="{{ path('match_maker_show', {'id': match_playing.id}) }}">show</a>
+                                        <a href="{{ path('match_maker_edit', {'id': match_playing.id}) }}">edit</a>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="6">Aucun match en cours...</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 mt-5">
+            <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                <h2 id="slide-over-heading" class="text-lg font-medium text-gray-900">
+                    Matchs terminé
+                </h2>
+                <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Player A
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Player B
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Gagnant
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Status
+                            </th>
+                            <th scope="col" class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Action
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="bg-white divide-y divide-gray-200">
+                        {% for match_over in matches_over %}
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_over.id }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_over.playerA.username }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_over.playerB.username }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_over.winner ? match_over.winner.username : 'N/A' }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">{{ match_over.status }}</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                        <a href="{{ path('match_maker_show', {'id': match_over.id}) }}">show</a>
+                                        <a href="{{ path('match_maker_edit', {'id': match_over.id}) }}">edit</a>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="6">Aucun match terminé...</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
     <script type="application/javascript">
         setTimeout(function()   {
             window.location.reload();
